--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script defer src="app.js" charset="utf-8"></script>
+  <script defer src="script.js" charset="utf-8"></script>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>R&M Sheet</title>
 </head>
