--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
 <body>
   <h1>Rick and Morty Character Sheet</h1>
   <dl>
-    <h2 Home>Home</h2>
-    <h2 R&M>More R&M</h2>
-    <h2 Wiki>Wiki</h2>
+    <h2><a href="http://127.0.0.1:5500/index.html">Home</a>
+    </h2>
+    <h2><a href="https://www.adultswim.com/videos/rick-and-morty">More R&M</a>
+    </h2>
+    <h2><a href="https://rickandmorty.fandom.com/wiki/Rickipedia">Wiki</a>
+    </h2>
   </dl>
   <img
     src="https://media1.giphy.com/media/3o7aD2d7hy9ktXNDP2/giphy.gif?cid=ecf05e47jriv8pum0njfjygm8x84v41xgjrztolrditb4th8&rid=giphy.gif&ct=s"
     alt="Portal">
-  <div class="search-section">
+  <form class="search-section">
     <input type="text" id="blank" placeholder="Character Name">
     <button id="search">Search!</button>
-  </div>
+  </form>
   <section class="character-list">
     <h2>Character Info</h2>
   </section>
+
+  <div style="margin-top: 25px;" id="char-data">
+  </div>
 
   <footer>
     <p><a href="https://www.linkedin.com/in/hayden-arnold-503997222/">My Github</a></p>
